o Fixed FreeBSD compilation errors (thanks, Heping Wen)

Jan 22, 2015 - chris ---------------------------------------------------
o Added Cursor.TryFind to hamsterdb-dotnet
	(thanks, mjmckp <matthew.j.m.peacock@gmail.com>)

Dec 30, 2014 - chris ---------------------------------------------------
o issue #43: fixed segfault when flushing transactions (thanks, Joel
	Jacobson)

Nov 28, 2014 - chris ---------------------------------------------------
o Fixed large file support on linux (thanks, Thomas Fähnle)

Nov 27, 2014 - chris ---------------------------------------------------
o Removed dependency to malloc.h
o issue #42: ham_cursor_find returned wrong key w/ approx. matching and
	transactions

Nov 21, 2014 - chris ---------------------------------------------------
o Fixed compilation error on OSX (thanks, Daniel Lemire)

Nov 20, 2014 - chris ---------------------------------------------------
o Fixed compilation error on debian Wheezy, gcc 4.7.2, 32bit (thanks,
	Thomas Fähnle)

Nov 17, 2014 - chris ---------------------------------------------------
o The macro HAM_API_REVISION is now deprecated; use HAM_VERSION_* instead

Nov 16, 2014 - chris ---------------------------------------------------
o The github wiki is now linked into documentation/wiki

Nov 08, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.9

Nov 08, 2014 - chris ---------------------------------------------------
o C# API now supports approx. matching
o C# auto-cleanup of resources no longer can cause segmentation faults

Nov 01, 2014 - chris ---------------------------------------------------
o Removed outdated project files of MSVC2008, added MSVC2013

Oct 15, 2014 - chris ---------------------------------------------------
o Removed custom ham_* typedefs; now using types from stdint.h

Oct 14, 2014 - chris ---------------------------------------------------
o Fixed a failing test from the erlang package
