@@ -9,6 +9,9 @@ Dec 30, 2014 - chris ---------------------------------------------------
 o issue #43: fixed segfault when flushing transactions (thanks, Joel
 	Jacobson)
 
+Dec 05, 2014 - chris ---------------------------------------------------
+o Added a new parameter HAM_PARAM_POSIX_FADVISE (thanks, Thomas Fähnle)
+
 Nov 28, 2014 - chris ---------------------------------------------------
 o Fixed large file support on linux (thanks, Thomas Fähnle)
 
